# food-reminder

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  PURCHASE_AUTOMATION.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
conf/: config.example.yaml  purchase.yaml.example
docs/: PURCHASE_AUTOMATION.md
scripts/: check_availability.py  purchase_product.py
src/config/: loader.py  models.py
src/core/: checker.py  interfaces.py  notifier.py  purchaser.py  service.py  state.py
src/utils/: exceptions.py  logger.py
tests/fixtures/: in_stock.html  out_of_stock.html
tests/unit/: test_checker.py  test_state.py
